--- a/software.html
+++ b/software.html
@@ -39,16 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698693011-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q76aVfw2&k=Job&j=oHvCafwI&__jvst=Employee+Referral&__jvsd=sk08BgwO&__jvsc=Twitter&bid=n9g8qMwe'>Progress Careers - Technical Writer, Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698693011-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692883-sr-software-engineer-for-global-sportswear-brand-no-c2c-only-w2-'>Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692852-lead-full-stack-cloud-software-engineer-for-global-sportswear-brand'>Aroghia Group Lead Full Stack Cloud Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697953180-junior-software-engineer'>Allegro Junior Software Engineer | SmartRecruiters</a></h5> 
@@ -99,7 +103,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o5rK8fw8&__jvst=Employee+Referral&__jvsd=sidoUfwx&__jvsc=Twitter&bid=nCB3qMwX'>Palo Alto Networks Careers - Software Engineer (Network Forwarding)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o5rK8fw8&__jvst=Employee+Referral&__jvsd=sidoUfwx&__jvsc=Twitter&bid=nCB3qMwX'>Palo Alto Networks Careers - Software Engineer (Network Forwarding)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/credible/jobs/1942074'>Job Application for Senior Software Engineer at Credible</a></h5> 
+<h5><a href='https://boards.greenhouse.io/credible/jobs/1942074'>Job Application for Senior Software Engineer at Credible</a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -191,7 +195,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -259,7 +263,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/impinj/job/ol0nbfwD?utm_source=bambu&utm_medium=social&utm_campaign=advocacy&blaid=265656'>Impinj Careers - Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/impinj/job/ol0nbfwD?utm_source=bambu&utm_medium=social&utm_campaign=advocacy&blaid=265656'>Impinj Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -275,11 +279,11 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.abrecco.com/job/software-developer-asp-net-sql-server-aberdeen-excellent-salary-and-benefits-it-web-development-aberdeenshire-1038.htm'>Software Developer - ASP.NET / SQL Server - Aberde - Aberdeenshire - UK - Scotland, Grampian, Aberdeenshire - (1038)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.abrecco.com/job/software-developer-asp-net-sql-server-aberdeen-excellent-salary-and-benefits-it-web-development-aberdeenshire-1038.htm'>Software Developer - ASP.NET / SQL Server - Aberde - Aberdeenshire - UK - Scotland, Grampian, Aberdeenshire - (1038)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxFwi7mc.M30CyFIQZW6iep8-&embedsource=CareerSite'>Lead Application Software Engineer</a></h5> 
+<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxFwi7mc.M30CyFIQZW6iep8-&embedsource=CareerSite'>Lead Application Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -295,7 +299,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/d52bdff6-b6d6-4891-8303-a4ef88dae666'>Couchbase - Principal Software Engineer - Query Optimizer</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/d52bdff6-b6d6-4891-8303-a4ef88dae666'>Couchbase - Principal Software Engineer - Query Optimizer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -307,7 +311,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.zupajobs.co.uk/job/senior-software-developers-c-50k-60k-eastleigh-hampshire/'>Senior Software Developers C# ?50K - ?60K - Eastleigh, Hampshire - zupaJobs</a></h5> 
+<h5><a href='https://www.zupajobs.co.uk/job/senior-software-developers-c-50k-60k-eastleigh-hampshire/'>Senior Software Developers C# ?50K - ?60K - Eastleigh, Hampshire - zupaJobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -331,7 +335,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://careers.caci.com/ShowJob/JobId/2228104/SoftwareEngineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.caci.com/ShowJob/JobId/2228104/SoftwareEngineer'>
 	Software Engineer | CACI International
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -389,7 +393,7 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
 <p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -405,7 +409,7 @@
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -436,10 +440,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698642179-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oFegbfw4&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nkDqqMw4'>Cirrus Logic Careers - Software Developer (Java, C#, C++)</a></h5> 
-<p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-11-01</p>
 <hr/>
 
 
